modernizing example code for the objectmapper Java example